[package]
name = "ratatui-counter-async-app"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.27.0", features = ["event-stream", "serde"] }
futures = "0.3.30"
ratatui = { version = "0.26.1", features = ["serde", "macros"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.10"
